--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
+    "@spectrum-css/button": "^3.0.3",
+    "@spectrum-css/page": "^3.0.2",
+    "@spectrum-css/vars": "^3.0.2",
     "leaflet": "^1.7.1",
     "stimulus": "^2.0.0",
+    "tailwindcss": "^2.2.14",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
