--- a/app/package.json
+++ b/app/package.json
@@ -17,23 +17,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "~42.0.0",
+    "expo-font": "~9.2.1",
+    "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
     "native-base": "3.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5",
-    "expo-splash-screen": "~0.11.2",
-    "expo-updates": "~0.8.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "0.14.10"
+    "react-native-svg": "12.1.1",
+    "react-native-unimodules": "0.14.10",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -42,9 +45,9 @@
     "typescript": "~4.0.0"
   },
   "bugs": {
-    "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
+    "url": "https://github.com/sobstel/viztrail/issues"
   },
-  "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-  "author": "Aditya Jamuar",
+  "homepage": "https://github.com/sobstel/viztrail",
+  "author": "Przemek Sobstel",
   "private": true
 }
