--- a/app/package.json
+++ b/app/package.json
@@ -1,53 +1,50 @@
 {
   "name": "viztrail",
   "version": "1.0.0",
-  "keywords": [
-    "react",
-    "expo",
-    "template",
-    "typescript",
-    "nativebase"
-  ],
-  "license": "MIT",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "~42.0.0",
-    "expo-font": "~9.2.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
     "native-base": "3.2.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-maps": "0.29.4",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-unimodules": "0.14.10",
-    "react-native-web": "~0.13.12",
+    "react-native-unimodules": "~0.15.0",
+    "react-native-web": "0.17.1",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
+    "typescript": "~4.3.5"
   },
-  "bugs": {
-    "url": "https://github.com/sobstel/viztrail/issues"
-  },
-  "homepage": "https://github.com/sobstel/viztrail",
-  "author": "Przemek Sobstel",
   "private": true
 }
